fix: align alter-sort right

--- a/src/table-sort.css
+++ b/src/table-sort.css
@@ -10,6 +10,7 @@
   border: 0;
   padding: 0;
   background-color: var(--color-primary-800);
+  float: right;
 }
 
 .alter-sorting:hover {
